# hermes

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  order_fills.csv  pyproject.toml
src/hermes/: context.py  info_methods.py  main.py  order_entry.py  risk_manager.py  test.py
src/hermes/options/: main.py  utils.py
src/hermes/session/: alpaca.py  helpers.py  main.py  session.py
src/hermes/trading/: order_entry.py  risk_manager.py
src/hermes/trading/orders/: main.py  orders.py  utils.py
src/oec/: account.py  main.py  order_entry.py  positions.py  risk_manager.py  stream.py
src/trading_analytics/processes/: log_executions.py
src/trading_order_entries/: context.py  main.py  utils.py
src/trading_order_entries/options/: utils.py
src/trading_order_entries/session/: alpaca.py  main.py
src/trading_order_entries/trading/orders/: main.py  utils.py
tests/order_entry/: test_get_quote.py  test_get_side_object.py  test_handle_order_entry_integration.py  test_validate_orders.py
tests/risk_manager/: test_take_profit.py
